Locks without computing address for unexecuted events