@@ -1,16 +1,20 @@
 package com.dat3m.dartagnan.wmm.relation.basic;
 
+import com.dat3m.dartagnan.program.Program;
 import com.dat3m.dartagnan.program.arch.linux.event.lock.utils.State;
+import com.dat3m.dartagnan.program.arch.linux.event.lock.utils.Utils;
 import com.dat3m.dartagnan.program.arch.linux.utils.EType;
 import com.dat3m.dartagnan.program.event.Init;
 import com.dat3m.dartagnan.wmm.filter.FilterBasic;
 import com.dat3m.dartagnan.wmm.filter.FilterMinus;
+import com.dat3m.dartagnan.wmm.utils.Mode;
 import com.microsoft.z3.BoolExpr;
 import com.dat3m.dartagnan.program.event.Event;
 import com.dat3m.dartagnan.program.event.MemEvent;
 import com.dat3m.dartagnan.wmm.relation.Relation;
 import com.dat3m.dartagnan.wmm.utils.Tuple;
 import com.dat3m.dartagnan.wmm.utils.TupleSet;
+import com.microsoft.z3.Context;
 
 import java.util.*;
 
@@ -18,9 +22,17 @@ import static com.dat3m.dartagnan.wmm.utils.Utils.edge;
 
 public class RelRf extends Relation {
 
+    private Set<MemEvent> reads;
+
     public RelRf(){
         term = "rf";
         forceDoEncode = true;
+    }
+
+    @Override
+    public void initialise(Program program, Context ctx, Mode mode){
+        super.initialise(program, ctx, mode);
+        reads = null;
     }
 
     @Override
@@ -50,7 +62,6 @@ public class RelRf extends Relation {
                     }
                 }
             }
-
             maxTupleSet.removeAll(getIllegalLockTuples(maxTupleSet));
         }
         return maxTupleSet;
@@ -58,48 +69,81 @@ public class RelRf extends Relation {
 
     @Override
     protected BoolExpr encodeApprox() {
-        BoolExpr enc = ctx.mkTrue();
-        Map<MemEvent, List<BoolExpr>> rfMap = new HashMap<>();
+        BoolExpr enc = atMostOneEdgeToRead();
 
         for(Tuple tuple : maxTupleSet){
-            MemEvent w = (MemEvent) tuple.getFirst();
-            MemEvent r = (MemEvent) tuple.getSecond();
-            BoolExpr rel = edge("rf", w, r, ctx);
-            rfMap.putIfAbsent(r, new ArrayList<>());
-            rfMap.get(r).add(rel);
-
-            enc = ctx.mkAnd(enc, ctx.mkImplies(rel, ctx.mkAnd(
-                    ctx.mkAnd(w.executes(ctx), r.executes(ctx)),
-                    ctx.mkAnd(
-                            ctx.mkEq(w.getMemAddressExpr(), r.getMemAddressExpr()),
-                            ctx.mkEq(w.getMemValueExpr(), r.getMemValueExpr())
-                    )
+            MemEvent write = (MemEvent) tuple.getFirst();
+            MemEvent read = (MemEvent) tuple.getSecond();
+            BoolExpr edge = edge("rf", write, read, ctx);
+            enc = ctx.mkAnd(enc, ctx.mkImplies(edge, ctx.mkAnd(
+                    write.executes(ctx),
+                    read.executes(ctx),
+                    ctx.mkEq(write.getMemAddressExpr(), read.getMemAddressExpr()),
+                    ctx.mkEq(write.getMemValueExpr(), read.getMemValueExpr())
             )));
         }
 
-        for(MemEvent r : rfMap.keySet()){
-            enc = ctx.mkAnd(enc, ctx.mkImplies(r.executes(ctx), encodeEO(r.getCId(), rfMap.get(r))));
-        }
-
-        return ctx.mkAnd(enc, encodeLockConstraints());
+        return ctx.mkAnd(enc, atMostOneEdgeFromUnlock());
     }
 
-    private BoolExpr encodeEO(int readId, List<BoolExpr> set){
-        int num = set.size();
+    private BoolExpr atMostOneEdgeToRead(){
+        BoolExpr enc = ctx.mkTrue();
+        for(MemEvent read : getReads()){
+            int i = 0;
+            int cId = read.getCId();
+            BoolExpr clause = ctx.mkEq(mkL(cId, 0), ctx.mkFalse());
 
-        BoolExpr enc = ctx.mkEq(mkL(readId, 0), ctx.mkFalse());
-        BoolExpr atLeastOne = set.get(0);
+            for(Tuple tuple : maxTupleSet.getBySecond(read)){
+                BoolExpr prev = mkL(cId, ++i - 1);
+                BoolExpr edge = edge("rf", tuple.getFirst(), read, ctx);
+                clause = ctx.mkAnd(clause, ctx.mkNot(ctx.mkAnd(prev, edge)));
+                clause = ctx.mkAnd(clause, ctx.mkEq(mkL(cId, i), ctx.mkOr(prev, edge)));
+            }
 
-        for(int i = 1; i < num; i++){
-            enc = ctx.mkAnd(enc, ctx.mkEq(mkL(readId, i), ctx.mkOr(mkL(readId, i - 1), set.get(i - 1))));
-            enc = ctx.mkAnd(enc, ctx.mkNot(ctx.mkAnd(set.get(i), mkL(readId, i))));
-            atLeastOne = ctx.mkOr(atLeastOne, set.get(i));
+            enc = ctx.mkAnd(enc, ctx.mkImplies(read.executes(ctx), clause));
+
+            BoolExpr isSatisfied = mkL(cId, i);
+            if(read.is(EType.LKR)){
+                isSatisfied = ctx.mkOr(encodeCannotExecLock(read), isSatisfied);
+                enc = ctx.mkAnd(enc, ctx.mkEq(Utils.isLockObtainedVar(read, ctx), mkL(cId, i)));
+            }
+            enc = ctx.mkAnd(enc, ctx.mkImplies(read.executes(ctx), isSatisfied));
         }
-        return ctx.mkAnd(enc, atLeastOne);
+        return enc;
+    }
+
+    private BoolExpr atMostOneEdgeFromUnlock(){
+        BoolExpr enc = ctx.mkTrue();
+        TupleSet blockingReadTuples = new TupleSet();
+        Set<MemEvent> unlocks = new HashSet<>();
+
+        for(Tuple tuple : getMaxTupleSet()){
+            if((tuple.getFirst().is(EType.UL) || tuple.getFirst().is(EType.INIT)) && tuple.getSecond().is(EType.LKR)){
+                blockingReadTuples.add(tuple);
+                unlocks.add((MemEvent) tuple.getFirst());
+            }
+        }
+
+        for(MemEvent unlock : unlocks){
+            int i = 0;
+            int cId = unlock.getCId();
+            BoolExpr clause = ctx.mkEq(mkM(cId, 0), ctx.mkFalse());
+            for(Tuple tuple : blockingReadTuples.getByFirst(unlock)){
+                BoolExpr edge = edge("rf", unlock, tuple.getSecond(), ctx);
+                clause = ctx.mkAnd(clause, ctx.mkNot(ctx.mkAnd(mkM(cId, i++ - 1), edge)));
+                clause = ctx.mkAnd(clause, ctx.mkEq(mkM(cId, i), ctx.mkOr(mkM(cId, i - 1), edge)));
+            }
+            enc = ctx.mkAnd(enc, ctx.mkAnd(clause, ctx.mkEq(Utils.isLockConsumedVar(unlock, ctx), mkM(cId, i))));
+        }
+        return enc;
     }
 
     private BoolExpr mkL(int readId, int i) {
         return (BoolExpr) ctx.mkConst("l(" + readId + "," + i + ")", ctx.mkBoolSort());
+    }
+
+    private BoolExpr mkM(int unlockId, int i) {
+        return (BoolExpr) ctx.mkConst("m(" + unlockId + "," + i + ")", ctx.mkBoolSort());
     }
 
     private TupleSet getIllegalLockTuples(TupleSet tupleSet){
@@ -117,8 +161,7 @@ public class RelRf extends Relation {
                 if(e2.is(EType.LF) || e2.is(EType.LKR) || e2.is(EType.RU)){
                     try {
                         int value = Integer.parseInt(((Init)tuple.getFirst()).getValue().toString());
-                        isLegal = (!e2.is(EType.LF) || value == State.TAKEN)
-                                && ((!e2.is(EType.LKR) && !e2.is(EType.RU)) || value == State.FREE);
+                        isLegal = value == (e2.is(EType.LF) ? State.TAKEN : State.FREE);
                     } catch (NumberFormatException e){
                         throw new RuntimeException("Initial value of a lock must be an integer");
                     }
@@ -134,82 +177,25 @@ public class RelRf extends Relation {
         return result;
     }
 
-    private BoolExpr encodeLockConstraints(){
+    private BoolExpr encodeCannotExecLock(MemEvent lock){
         BoolExpr enc = ctx.mkTrue();
-        TupleSet unlockTuples = getUnlockToLockTuples();
-
-        if(!unlockTuples.isEmpty()){
-            Set<MemEvent> unlocks = new HashSet<>();
-            for(Tuple tuple : unlockTuples){
-                unlocks.add((MemEvent) tuple.getFirst());
-            }
-
-            for(MemEvent unlock : unlocks){
-                List<Tuple> tuples = new ArrayList<>(unlockTuples.getByFirst(unlock));
-                if(!tuples.isEmpty()){
-                    int num = tuples.size();
-                    int unlockId = unlock.getCId();
-                    MemEvent lock = (MemEvent)tuples.get(0).getSecond();
-                    BoolExpr lastEdge = edge("rf", unlock, lock, ctx);
-
-                    // At most one lock can read from an unlock event
-                    BoolExpr atMostOne = ctx.mkEq(mkM(unlockId, 0), ctx.mkFalse());
-
-                    // Exists a lock reading from this unlock
-                    BoolExpr atLeastOne = lastEdge;
-
-                    // A (blocking) read is already satisfied or addresses does not match this unlock
-                    BoolExpr none = ctx.mkTrue();
-                    if(lock.is(EType.BL)) {
-                        none = ctx.mkAnd(none, noReadUnlockLock(unlock, lock));
-                    }
-
-                    for(int i = 1; i < num; i++){
-                        lock = (MemEvent)tuples.get(i).getSecond();
-                        BoolExpr edge = edge("rf", unlock, lock, ctx);
-
-                        // At most one lock can read from an unlock event
-                        atMostOne = ctx.mkAnd(atMostOne, ctx.mkEq(mkM(unlockId, i), ctx.mkOr(mkM(unlockId, i - 1), lastEdge)));
-                        atMostOne = ctx.mkAnd(atMostOne, ctx.mkNot(ctx.mkAnd(edge, mkM(unlockId, i))));
-
-                        // Exists a lock reading from this unlock
-                        atLeastOne = ctx.mkOr(atLeastOne, edge);
-
-                        // A (blocking) read is already satisfied or addresses does not match this unlock
-                        if(lock.is(EType.BL)) {
-                            none = ctx.mkAnd(none, noReadUnlockLock(unlock, lock));
-                        }
-
-                        lastEdge = edge;
-                    }
-
-                    enc = ctx.mkAnd(enc, atMostOne);
-                    enc = ctx.mkAnd(enc, ctx.mkImplies(unlock.executes(ctx), ctx.mkOr(atLeastOne, none)));
-                }
-            }
+        for(Tuple tuple : maxTupleSet.getBySecond(lock)){
+            enc = ctx.mkAnd(enc, ctx.mkOr(
+                    Utils.isLockConsumedVar(tuple.getFirst(), ctx),
+                    ctx.mkNot(tuple.getFirst().executes(ctx)),
+                    ctx.mkNot(ctx.mkEq(((MemEvent)tuple.getFirst()).getMemAddressExpr(), lock.getMemAddressExpr()))
+            ));
         }
         return enc;
     }
 
-    private BoolExpr noReadUnlockLock(MemEvent unlock, MemEvent lock){
-        return ctx.mkOr(
-                ctx.mkOr(ctx.mkNot(ctx.mkBoolConst(lock.cfVar())), lock.executes(ctx)),
-                ctx.mkNot(ctx.mkEq(unlock.getMemAddressExpr(), lock.getMemAddressExpr()))
-        );
-    }
-
-    private TupleSet getUnlockToLockTuples(){
-        TupleSet result = new TupleSet();
-        for(Tuple tuple : getMaxTupleSet()){
-            if((tuple.getFirst().is(EType.UL) || tuple.getFirst().is(EType.INIT))
-                    && tuple.getSecond().is(EType.LKR)){
-                result.add(tuple);
+    private Set<MemEvent> getReads(){
+        if(reads == null){
+            reads = new HashSet<>();
+            for(Tuple tuple : getMaxTupleSet()){
+                reads.add((MemEvent) tuple.getSecond());
             }
         }
-        return result;
-    }
-
-    private BoolExpr mkM(int unlockId, int i) {
-        return (BoolExpr) ctx.mkConst("m(" + unlockId + "," + i + ")", ctx.mkBoolSort());
+        return reads;
     }
 }
